<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SCUB</string>
    <string name="action_settings">Settings</string>
    <string name="login">登录</string>
    <string name="user_name">用户名</string>
    <string name="user_pswd">密  码</string>
    <string name="btnLogin">登录</string>
    <string name="home">首页</string>
    <string name="jwc">教务处</string>
    <string name="qg">青广</string>
    <string name="jz">讲座</string>
    <string name="lf">失物招领</string>
    <string name="mlogin">管理员登录</string>
    <string name="more">更多</string>
    <string name="push">发布信息</string>
    <string name="del_info">删除信息</string>
    <string name="exit">退出</string>
    <string name="about">关于</string>
    <string name="last">前一个</string>
    <string name="next">下一个</string>
    <string name="error">数据加载出错</string>
    <string name="infotitle">标题</string>
    <string name="infocontext">内容</string>
    <string name="publish">提交</string>
    <string name="titletishi">输入标题</string>
    <string name="texttishi">输入发布内容</string>
    <string name="manage">管理员</string>
    <string name="user">学  生</string>
    <string name="number">学号</string>
    <string name="lfname">物名</string>
    <string name="hname">主讲人</string>
    <string name="address">地址</string>
    <string name="time">时间</string>
    <string name="date">日期</string>
    <string name="lfcheck">寻找</string>
    <string name="logincheck">记住密码</string>
    <string name="back">返回</string>
    <string name="submit">提交</string>
    <string name="option">选项</string>
    <string name="comment">评论</string>
    <string name="introduction">岷峨挺秀，锦水含章。巍巍学府，德渥群芳。
　　四川大学是教育部直属全国重点大学，是布局在中国西部、“985工程”和“211工程”重点建设的高水平研究型综合大学。学校现任党委书记杨泉明教授、校长谢和平院士。
　　四川大学地处中国历史文化名城——“天府之国”的成都，有望江、华西和江安三个校区，占地面积7050亩，校舍建筑面积254.6万平方米。校园环境幽雅、花木繁茂、碧草如茵、景色宜人，是读书治学的理想园地。
　　四川大学由原四川大学、原成都科技大学、原华西医科大学三所全国重点大学经过两次合并而成。原四川大学起始于1896年四川总督鹿传霖奉光绪特旨创办的四川中西学堂，是西南地区最早的近代高等学校；原成都科技大学是新中国院系调整时组建的第一批多科型工科院校；原华西医科大学源于1910年由西方基督教会组织在成都创办的华西协合大学，是西南地区最早的西式大学和国内最早培养研究生的大学之一。1994年，原四川大学和原成都科技大学合并为四川联合大学，1998年更名为四川大学，江泽民、李鹏等党和国家领导人就两校合并为学校题词并寄予深切厚望。2000年，四川大学与原华西医科大学合并，组建了新的四川大学。李岚清同志在考察新四川大学时说：“四川大学是我们改革最早的大学，对我国高校的改革做出了历史性的贡献，可以说是高校体制改革的先锋。”在2008年“5·12”汶川特大地震抗震救灾期间，吴邦国、温家宝等党和国家领导人先后到四川大学视察慰问。

　　四川大学承文翁之教，聚群贤英才。百余年来，学校先后汇聚了历史学家顾颉刚、文学家李劼人、美学家朱光潜、物理学家吴大猷、植物学家方文培、卫生学家陈志潜、数学家柯召等大师。历史上，吴玉章、张澜曾执掌校务，共和国开国元勋朱德、共和国主席杨尚昆、文坛巨匠郭沫若和巴金、一代英烈江竹筠（江姐）和毛英才等曾在川大求学。中国科学院和中国工程院院士中，有50余位是川大校友；2001年评选的近代50位“四川文化名人”中，有36人是川大校友。
　　四川大学学科门类齐全，覆盖了文、理、工、医、经、管、法、史、哲、农、教、艺等12个门类，有30个学科型学院及研究生院、海外教育学院等学院。现有博士学位授权一级学科44个，博士学位授权点277个，硕士学位授权点361个，专业学位授权点32个，本科专业131个，博士后流动站33个，国家重点学科46个，国家重点培育学科4个，是国家首批工程博士培养单位。
　　四川大学大师云集，名师荟萃。截至2012年年底，有专任教师4292人，具有正高级职称的1188人。学校有中国科学院和中国工程院院士13人，“杰出教授”6人，国家“千人计划”入选者35人（含“青年项目”11人，“外专项目”1人），“长江学者奖励计划”特聘教授24人和讲座教授9人，国家自然科学“杰出青年基金”获得者41人（原A类），“973”首席科学家10人、牵头“973”重大基础研究项目12项，国家社科基金重大招标（委托）项目获得者14人（15项），国家教学名师奖获得者12人，四川省“百人计划”与“青年百人计划”入选者39人。
　　四川大学在长期的办学历程中，形成了深厚的人文底蕴、扎实的办学基础和以校训“海纳百川，有容乃大”、校风“严谨、勤奋、求是、创新”为核心的川大精神。近年来，学校围绕创建一流研究型综合大学的奋斗目标，确立了“以人为本，崇尚学术，追求卓越”的现代大学办学理念，建立了“以院系为管理重心，以教师为办学主体，以学生为育人中心”的管理运行新机制，提出了“精英教育、质量为本、科教结合、学科交叉”的人才培养指导思想，确立了培养“具有深厚人文底蕴、扎实专业知识、强烈创新意识、宽广国际视野的国家栋梁和社会精英”的人才培养目标，探索构建了“323+X”创新人才培养体系。现有全日制普通本科生4万余人，硕博士研究生2万余人，外国留学生及港澳台学生2000余人。2003年以来，学校获得国家教学成果奖19项、国家精品（视频）课程36门，获得百篇优秀博士论文21篇。
　　四川大学科研实力雄厚，标志性成果不断涌现。学校现有12个国家重点实验室、国家工程实验室及国家工程技术研究中心，11个教育部重点实验室和4个教育部工程研究中心，3个卫生部重点实验室；有9个国家人才培养和科学研究及课程教学基地，8个国家级实验教学示范中心，1个国家大学生文化素质教育基地，4个教育部人文社会科学重点研究基地，2个国家药物临床实验机构，1个国家药品临床研究基地。2005年以来，学校共获国家科技三大奖19项。2012年，学校科研经费达18.45亿元，发表国内科技论文总数列全国第7位，SCI收录论文数列全国高校第5位。在人文社会科学方面，学校先后编撰出版了《汉语大字典》、《全宋文》、《中国道教史》、《儒藏》等大型文化建设成果。
　　四川大学积极服务于国家和区域经济社会发展，服务社会的能力不断增强。学校是全国高校中最早设立的6家国家技术转移中心之一，2008年被国家科技部授予首批“国家技术转移示范机构”，2009年成为首批获得“全国企事业知识产权示范单位”称号的4所高校之一。四川大学科技园是国家最早批准的15个国家大学科技园试点之一，2012年被评为国家A类（优秀）大学科技园，已孵化包括1家上市公司在内的科技企业50余家。近年来，学校与江苏、四川、西藏、新疆等50多个省（自治区）、市和3000多家企业建立了产学研合作关系，建立了近百个高水平校地企产学研平台。学校接受了全国上千家企业委托进行的技术开发、技术改造项目1万余项，一大批重大科技创新成果已成为相关行业的主导技术。2009年，学校被批准成为首批13个“干部培训高校基地”之一。学校设有4所卫生部直属附属医院，在汶川特大地震和青海玉树地震等重大自然灾害伤员救治过程中发挥了重要作用，为促进我国卫生事业发展、提高人民群众健康水平作出了重要贡献。
　　四川大学坚持开放办学，不断推进国际交流与合作，国际影响力和竞争力显著提升。目前，学校已与32个国家和地区的170余所大学和研究机构建立了交流合作关系，与美国、加拿大、欧洲、澳大利亚、港澳台等10多个国家和地区的近70余所国际知名大学构建了全方位、多层次、多形式的学生联合培养体系。与韩国、美国的国际知名大学合作共建了4所孔子学院。与美国加州大学、华盛顿大学联合建立了九寨沟生态环境与可持续发展国际研究中心，与美国亚利桑那州立大学共同组建了中美大学战略规划研究所、美国文化中心，与德国克劳斯塔尔工业大学共同组建了中德能源研究中心，与国务院扶贫办、国务院原西部开发办、联合国开发计划署和世界银行共同组建了中国西部反贫困研究中心，与香港理工大学共同组建了四川大学—香港理工大学灾后重建与管理学院。
　　四川大学图书馆藏书620万册，人文博物馆珍藏文物5.4万余套（8万余件），自然博物馆收藏动、植物标本84余万件（份），档案馆和校史展览馆收藏各类档案25余万卷（其中珍藏历史档案9000余卷）。学校体育场馆设施齐全、设备先进。学校还建有校园网、分析测试中心、现代教育技术中心、国家外语考试与出国留学人员培训机构以及成人教育与网络教育学院等，主办有49种面向国内外发行的学术刊物。
　　锦江黉门，弦歌铿锵。展望未来，四川大学将始终肩负集思想之大成、育国家之栋梁、开学术之先河、促科技之进步、引社会之方向的历史使命与社会责任，再谱中国现代大学继承与创造并进、光荣与梦想交织的辉煌篇章！</string>
</resources>
