<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/loginback"
    android:gravity="center_horizontal"
    >
   <LinearLayout
       android:orientation="horizontal"
		android:layout_gravity="center_horizontal"
		android:paddingTop="25px"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
       >
       <TextView
           android:text="@string/user_name"
           android:layout_width="100px"
           style="@style/text"
		   android:layout_height="wrap_content"
		   android:layout_gravity="center_vertical"
           />
        <EditText
			android:id="@+id/etname"
			android:singleLine="true"
			android:layout_width="150px"
			android:layout_height="wrap_content"
			/>
        </LinearLayout>
     <LinearLayout
        android:orientation="horizontal"
		android:layout_gravity="center_horizontal"
		android:paddingTop="25px"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
       >
       <TextView
           android:text="@string/user_pswd"
           android:layout_width="100px"
           style="@style/text"
		   android:layout_height="wrap_content"
		   android:layout_gravity="center_vertical"
           />
        <EditText
			android:id="@+id/etpswd"
			android:singleLine="true"
			android:layout_width="150px"
			android:layout_height="wrap_content"
			android:inputType="textPassword"
			/>
     </LinearLayout>
      <LinearLayout
		android:orientation="horizontal"
		android:layout_gravity="center_horizontal"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		>
        <CheckBox
			android:id="@+id/loginRemember"
			android:text="@string/logincheck"
			android:layout_gravity="center_horizontal"
			android:checked="false"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			/>												
		<Button
			android:id="@+id/btnLogin"
			style="@style/button"
			android:layout_width="120px"
			android:layout_height="wrap_content"
			android:text="@string/btnLogin"
			/>
      </LinearLayout>
</LinearLayout>