<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/blueback"
    >
    <LinearLayout android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
         >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:text="@string/infotitle" />

        <EditText
            android:id="@+id/infotitle"
            android:layout_height="wrap_content"
            android:layout_width="0dip"
            android:textColor="#FFFFFF"
            android:layout_marginLeft="10dp"
            android:inputType="text"
            android:layout_weight="8.89"
            android:hint="@string/titletishi" />
    </LinearLayout>
         <LinearLayout
       		android:orientation="horizontal"
			android:paddingTop="6dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
   	    	>
       		<TextView
          	 	android:layout_width="wrap_content"
		   		android:layout_height="wrap_content"
		   		android:textColor="#FFFFFF"
		   		android:text="@string/date"
		   		android:layout_marginLeft="20dp"
            	/>
        	<TextView
            	android:id="@+id/qgdate"
            	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textColor="#FFFFFF"
		   		android:text=" xxxx-xx-xx"
		   		android:textSize="20sp"
		   		android:layout_marginLeft="10dp"
            	/>
        	<ImageButton
				android:id="@+id/qgdatebtn"
				android:src="@drawable/dowm"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_marginLeft="20dp"
				android:background="#00000000"
				/> 
        	<!-- <Button
		    android:id="@+id/qgdatebtn"
		    android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:background="#4876FF"
		    android:text="D"
		    android:textSize="20sp"
		    /> -->
        </LinearLayout>
        <LinearLayout
       		android:orientation="horizontal"
			android:paddingTop="6dp"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
   	    	>
       		<TextView
           		android:layout_width="wrap_content"
		   		android:layout_height="wrap_content"
		   		android:textColor="#FFFFFF"
		  	 	android:text="@string/time"
		  	 	android:layout_marginLeft="20dp"
            	/>
        	<TextView
            	android:id="@+id/qgtime"
             	android:layout_width="wrap_content"
		    	android:layout_height="wrap_content"
		    	android:textColor="#FFFFFF"
		    	android:text="00:00"
		    	android:textSize="20sp"
		    	android:layout_marginLeft="10dp"
            	/>
         	 <ImageButton
				android:id="@+id/qgtimebtn"
				android:src="@drawable/dowm"
				android:layout_width="30dp"
				android:layout_height="30dp"
				android:layout_marginLeft="20dp"
				android:background="#00000000"
				/>
         	<!-- <Button
		    android:id="@+id/qgtimebtn"
		    android:layout_width="40dp"
		    android:layout_height="40dp"
		    android:background="#4876FF"
		    android:text="T"
		    android:textSize="20sp"
		    /> -->
        </LinearLayout>
        
          <TextView 
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:text="@string/infocontext"
             android:textColor="#FFFFFF"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
             />
        <ScrollView 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            >
         <EditText 
             android:id="@+id/infocontext"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
             android:lines="9"
             android:hint="@string/texttishi"
             android:textColor="#FFFFFF"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
             />
        </ScrollView>
        </LinearLayout>
        <RelativeLayout
       	android:layout_weight="10"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="#000000"
   	    >
   		<ImageButton
   		    android:id="@+id/exitbtn"
			android:src="@drawable/backbt"
			android:background="#000000"
			android:layout_width="40dp"
			android:layout_height="fill_parent"
			android:layout_alignParentLeft="true"
		/>
   		<TextView android:layout_toRightOf="@id/exitbtn"
   		    android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
   		    android:text="@string/back"
   		    android:textColor="#FFFFFF"/>
        <ImageButton
			android:id="@+id/publishbtn"
			android:src="@drawable/submitbt"
			android:background="#000000"
			android:layout_width="40dp"
			android:layout_height="fill_parent"
			android:layout_alignParentRight="true"
		/>
        <TextView android:layout_toLeftOf="@id/publishbtn"
            android:layout_width="40dp"
            android:layout_height="fill_parent"
            android:gravity="center_vertical"
   		    android:text="@string/submit"
   		    android:textColor="#FFFFFF"/>
        </RelativeLayout>
</LinearLayout>